# radxa-age-gender-npu

./: .gitignore  CMakeLists.txt  HUONG_DAN_CHAY.txt  README.md  run.sh
npu/: CMakeLists.txt  HUONG_DAN_NPU.txt  app_npu.cpp  app_npu.h  main_npu.c  run_npu.sh
npu/qnn/: QnnRuntime.cpp  QnnRuntime.hpp
scripts/: diag.sh  selftest.sh
src/: app.cpp  app.h  capture_test.cpp  decode_test.cpp  image_test.cpp  main.c  mjpg_test.cpp
